<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/payment_details"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp">

        <TextView
            style="@style/fee_activity"
            android:layout_weight="1"
            android:text="@string/payment_status" />

        <TextView
            android:id="@+id/pay_status"
            style="@style/fee_activity"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp">

        <TextView
            style="@style/fee_activity"
            android:layout_weight="1"
            android:text="@string/txn_id" />

        <TextView
            android:id="@+id/txn_id"
            style="@style/fee_activity"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp">

        <TextView
            style="@style/fee_activity"
            android:layout_weight="1"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/pay_amount"
            style="@style/fee_activity"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/payment_history_msg"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp">

    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_details"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:text="@string/close"
        android:textColor="@color/colorPrimaryDark"
        app:strokeColor="@color/colorPrimaryDark">

    </com.google.android.material.button.MaterialButton>


</LinearLayout>