<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="0dp">

            <TextView
                style="@style/fee_activity"
                android:layout_weight="1"
                android:text="@string/payment_status" />

            <TextView
                android:id="@+id/payment_status"
                style="@style/fee_activity"
                android:layout_height="match_parent"
                android:textAllCaps="true"
                android:layout_weight="1" />

        </LinearLayout>

        <View style="@style/profile_divider"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="3"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="0dp">

            <TextView
                style="@style/fee_activity"
                android:layout_weight="1.9"
                android:text="@string/student_name" />

            <TextView
                android:id="@+id/stu_name"
                style="@style/fee_activity"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

        <View style="@style/profile_divider"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="0dp"
            android:weightSum="7">

            <TextView
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:text="@string/class_name" />

            <TextView
                android:id="@+id/stu_class"
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_weight="1.7"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/sec" />

            <TextView
                android:id="@+id/stu_section"
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:text="@string/roll" />

            <TextView
                android:id="@+id/stu_roll_no"
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

        <View style="@style/profile_divider"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="6"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="0dp">
            <TextView
                style="@style/fee_activity"
                android:layout_weight=".8"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:text="@string/due_on" />

            <TextView
                android:id="@+id/fee_due_date"
                style="@style/fee_activity"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                style="@style/fee_activity"
                android:layout_weight=".9"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:text="@string/paid_on" />

            <TextView
                android:id="@+id/fee_paid_on"
                style="@style/fee_activity"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:textColor="@color/green"/>

        </LinearLayout>
        <View style="@style/profile_divider"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="7"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="0dp">

            <TextView
                style="@style/fee_activity"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/edu" />

            <TextView
                android:id="@+id/fee_edu_charge"
                style="@style/fee_activity"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:textColor="@color/green"/>

            <TextView
                style="@style/fee_activity"
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:text="@string/conv" />

            <TextView
                android:id="@+id/fee_con_charges"
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:textColor="@color/green"/>

            <TextView
                style="@style/fee_activity"
                android:layout_weight="1.1"
                android:layout_width="0dp"
                android:textAlignment="center"
                android:text="@string/other" />

            <TextView
                android:id="@+id/fee_other_charges"
                style="@style/fee_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:textColor="@color/green"/>
        </LinearLayout>
        <View style="@style/profile_divider"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="0dp">

            <TextView
                style="@style/fee_activity"
                android:layout_weight="1"
                android:text="@string/amount_paid" />

            <TextView
                android:id="@+id/fee_amount"
                style="@style/fee_activity"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/green"/>
        </LinearLayout>
    </LinearLayout>

    </androidx.cardview.widget.CardView>
    </LinearLayout>