<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="data"
            type="com.myapplication.theguideschool.ui.feePayHistory.baseObservable.PaymentHistoryBaseObservable" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        app:cardCornerRadius="@dimen/dimen_10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_payment_status_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/payment_status"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_payment_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAllCaps="true"
                android:text="@{data.paymentStatus}"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/payment_divider"
                style="@style/profile_divider"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_status_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_studentName_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/student_name"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_StudentName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{data.studentName}"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/payment_divider" />
            <View
                android:id="@+id/student_divider"
                style="@style/profile_divider"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_StudentName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fee_payedOn_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/paid_on"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/student_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fee_payedOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{data.paidOnDate}"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/student_divider" />
            <View
                android:id="@+id/paidOn_divider"
                style="@style/profile_divider"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fee_payedOn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fee_ammount_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/amount_paid"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paidOn_divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fee_ammount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@{data.feeAmount}"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/paidOn_divider" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>